# philpaxos

./: .cproject  .gitignore  .project  CMakeLists.txt  address_t.hpp  hl3_d.cpp  ip4_address_t.cpp  ip4_address_t.hpp  local_ip4_address_t.cpp  local_ip4_address_t.hpp  local_udp_address.cpp  local_udp_address.h  local_udp_peer_t.cpp  local_udp_peer_t.h  local_udp_server_i.cpp  local_udp_server_i.h  local_udp_socket_t.cpp  parameters.h  receiver_t.hpp  test_peer_t.hpp  test_server_t.cpp  test_server_t.h  udp_receiver.hpp
doc/: uml_class.graphml
oldsrc/: address_pool_t.cpp  address_pool_t.h  hl3_d.cpp  ip4_address_t.cpp  ip4_address_t.hpp  local_udp_peer_t.cpp  local_udp_peer_t.h  local_udp_server_i.cpp  local_udp_server_i.h  local_udp_socket_t.cpp  local_udp_socket_t.hpp  proposer_t.h  receiver_t.hpp  server.h  test_server_t.cpp  udp_receiver.hpp
src/: all.hpp  main.cpp
src/paxosphil/: parameters.hpp  paxosphil_all.hpp
src/paxosphil/messages/: deserialize.hpp  fork_action.hpp  messages_all.hpp  pm_al_accepted_t.hpp  pm_ap_promise_t.cpp  pm_ap_promise_t.hpp  pm_cp_fork_action_t.hpp  pm_lc_verdict_t.hpp  pm_pa_accept_t.hpp  pm_pa_prepare_t.hpp  pm_pc_key_t.hpp  pm_serializable_t.hpp  string_constants.hpp  verdict_t.hpp
src/paxosphil/nodes/: nodes_all.hpp  paxos_node_t.cpp  paxos_node_t.hpp  pn_acceptor_t.cpp  pn_acceptor_t.hpp  pn_listener_t.cpp  pn_listener_t.hpp  pn_phil_t.cpp  pn_phil_t.hpp  pn_proposer_t.cpp  pn_proposer_t.hpp
src/paxosphil/nodes/utility/: call_on_destruct_t.hpp  caller_t.hpp  identifiable_t.hpp  logdefs.hpp
src/server/: log_sender_t.hpp  log_udp_server_t.hpp  server_all.hpp  server_t.cpp  server_t.hpp  udp_server_t.hpp
src/transmission/: address_t.hpp  all.h  ip4_address_t.cpp  ip4_address_t.hpp  message_buffer_t.cpp  message_buffer_t.hpp  parameters.hpp  receiver_t.cpp  receiver_t.hpp  sender_t.hpp  socket_t.cpp  socket_t.hpp  udp_messenger_t.hpp  udp_receiver_t.cpp  udp_receiver_t.hpp  udp_sender_t.cpp  udp_sender_t.hpp  udp_socket_t.hpp
src/transmission/utility/: socket_reference_owner_t.hpp
test/: message_series_probe.cpp  paxos_messages_transmission.cpp  paxos_nodes.cpp  paxosphil_messages.cpp  paxosphil_srdr_messages.cpp  probe.cpp  receivers_senders.cpp  test_local_udp_server.cpp  transport_addess_socket_wrappers.cpp  understanding_of_principles.cpp
test/utils/: test_udp_client_t.hpp  test_udp_server_t.hpp
test_pndemos/: mock4acceptor.cpp  mock4listener.cpp  mock4philosopher.cpp  mock4proposer.cpp  pn_mock_phil_t.cpp
test_pndemos/mock4acceptor/: pn_mock_listener_t.hpp  pn_mock_proposer_t.hpp
test_pndemos/mock4proposer/: pn_mock_acceptor_t.hpp  pn_mock_philosopher_t.hpp
